<resources>
    <string name="app_name">Route Selector</string>

    <!-- Add Route -->
    <string name="add_route_route_nickname">Nickname</string>
    <string name="add_route_route_start_point">Start Point</string>
    <string name="add_route_route_end_point">End Point</string>
    <string name="add_route_select_start_point">Select Start Point</string>
    <string name="add_route_select_end_point">Select End Point</string>
    <string name="add_route_departure_time">Departure Time</string>
    <string name="add_route_notification_time">Notification Time</string>
    <string name="add_route_add_route_title">Add Route</string>
    <string name="add_route_edit_route_title">Edit Route</string>
    <string name="add_route_save">Save</string>
</resources>
